--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,11 @@
     <string name="end">Ends at: </string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="anarchy_open">Anarchy Battle (Series)</string>
+    <string name="loading">Loading</string>
+    <string name="testTagRegular">TestTagRegular</string>
+    <string name="Error">Network error connection timed out</string>
     <string name="app_widget_description">See normal Schedules on your home screen</string>
+
 
 </resources>
