--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="loading">Loading</string>
     <string name="testTagRegular">TestTagRegular</string>
     <string name="Error">Network error connection timed out</string>
-    <string name="app_widget_description">See normal Schedules on your home screen</string>
+    <string name="app_widget_description">See current turf war schedules</string>
 
 
 </resources>
