--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
     <string name="anarchy_open">Anarchy Battle (Series)</string>
+    <string name="x_battles">X Battles</string>
+    <string name="anarchy_battle">Anarchy Battles</string>
     <string name="loading">Loading</string>
     <string name="testTagRegular">TestTagRegular</string>
     <string name="Error">Network error connection timed out</string>
