--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="app_widget_description">See current turf war schedules</string>
     <string name="menu_about">About</string>
     <string name="reload">Reload</string>
+    <string name="repo_url">https://github.com/ThePowerdinoDeluxe990/Octo8</string>
+    <string name="api_url">https://splatoon.oatmealdome.me/</string>
+    <string name="assets_url">https://splatoonwiki.org/wiki/Main_Page</string>
+    <string name="my_url">https://thepowerdinodeluxe990.github.io/</string>
 </resources>
